Fix: Various UI issues on mobile

--- a/frontend/src/assets/app.scss
+++ b/frontend/src/assets/app.scss
@@ -1,7 +1,7 @@
 #app {
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    height: 100%;
     width: 100%;
 }
 
@@ -42,4 +42,5 @@ footer {
     text-align: center;
     flex-shrink: 0;
     font-family: 'Monaco', 'Consolas', 'Courier New', Courier, monospace;
+
 }
