--- a/frontend/src/assets/base.scss
+++ b/frontend/src/assets/base.scss
@@ -45,4 +45,5 @@ html, body {
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    height: 100%;
 }
